# postgresql-com-python

./: .gitignore  README.md  database_example.ini  pyproject.toml
bd_sql/: README.md  __main__.py
bd_sql/configs/: __init__.py
bd_sql/data/raw/: user_data.csv
database/: config.py  index.py
postresql/: __main__.py
